Add user delete, fix routing
