# PickEmLeagueFrontEnd/ClientApp/openapi.json
@@ -134,6 +134,26 @@
         }
       }
     },
+    "/User": {
+      "delete": {
+        "tags": ["User"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/WeatherForecast": {
       "get": {
         "tags": ["WeatherForecast"],
